--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,22 +1,46 @@
+---
+import "./src/styles/global.css";
+import Navbar from "../components/Navbar.astro";
+import Footer from "../components/Footer.astro";
+let { frontmatter, title, subtitle } = Astro.props;
+if (!title) title = frontmatter?.title;
+if (!subtitle) subtitle = frontmatter?.subtitle;
+---
+
 <!doctype html>
 <html lang="en">
-	<head>
-		<meta charset="UTF-8" />
-		<meta name="viewport" content="width=device-width" />
-		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-		<meta name="generator" content={Astro.generator} />
-		<title>Astro Basics</title>
-	</head>
-	<body>
-		<slot />
-	</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width" />
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+    <meta name="generator" content={Astro.generator} />
+    <title>{title}</title>
+  </head>
+  <body class="flex flex-col w-full min-h-dvh">
+    <header>
+      <Navbar />
+    </header>
+    <main
+      class="flex-grow border-x py-3 px-6 my-1 w-7xl max-w-full mx-auto [&>:first-child]:mt-0"
+    >
+      {
+        title && (
+          <hgroup>
+            <h1 class="mt-0">{title}</h1>
+            {subtitle && (
+              <blockquote class="border-transparent mt-0 text-primary brightness-120">
+                <p class="mt-1">
+                  <span class="text-2xl">&ldquo;</span> {subtitle} <span class="text-2xl">&rdquo;</span>
+                </p>
+              </blockquote>
+            )}
+          </hgroup>
+        )
+      }
+			<article class="max-w-(--w-typog) mb-6">
+      	<slot />
+			</article>
+    </main>
+		<Footer />
+  </body>
 </html>
-
-<style>
-	html,
-	body {
-		margin: 0;
-		width: 100%;
-		height: 100%;
-	}
-</style>
