fix menu svg import

--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -1,5 +1,5 @@
 ---
-import Menu from "../icons/Menu.svg";
+import Menu from "../icons/menu.svg";
 ---
 
 <nav class="w-full navbar bg-base-100 shadow-sm not-prose">
