--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -2,8 +2,10 @@
 import Menu from "../icons/menu.svg";
 ---
 
-<nav class="w-full navbar bg-base-100 shadow-sm not-prose">
-  <a href="/" class="btn btn-ghost text-xl text-primary transform-[scale(-1,1)]">&#129693;</a>
+<nav class="w-full navbar bg-accent/20 shadow-sm not-prose">
+  <a href="/" class="btn btn-ghost text-xl text-primary transform-[scale(-1,1)]"
+    >&#129693;</a
+  >
   <div class="dropdown dropdown-end ml-auto">
     <div tabindex="0" role="button" class="btn btn-ghost lg:hidden">
       <Menu />
