--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -1,4 +1,6 @@
-<footer class="not-prose min-h-[80px] footer sm:footer-horizontal footer-center bg-base-300 text-base-content p-4">
+<footer
+  class="not-prose min-h-[80px] footer sm:footer-horizontal footer-center bg-accent/30 text-base-content p-4"
+>
   <aside>
     <p>Copyright © {new Date().getFullYear()} - Derek J's Culdesac</p>
   </aside>
