--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -31,7 +31,7 @@ if (typeof vars["lastUpdated"] === "string") {
       <Navbar />
     </header>
     <main
-      class="flex-grow border-x py-3 px-6 my-1 w-7xl max-w-full mx-auto [&>:first-child]:mt-0"
+      class="bg-accent/1 flex-grow border-x py-4 px-6 w-7xl max-w-full mx-auto [&>:first-child]:mt-0"
     >
       {
         vars.title && (
