--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -12,7 +12,7 @@ import Menu from "../icons/menu.svg";
     </div>
     <ul
       tabindex="0"
-      class="menu menu-sm dropdown-content bg-base-100 rounded-box z-1 mt-3 w-52 p-2 shadow"
+      class="menu menu-sm dropdown-content bg-accent/30 rounded-box z-1 mt-3 w-52 p-2 shadow"
     >
       <li><a href="/">home</a></li>
     </ul>
