--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -4,12 +4,27 @@
 @plugin "daisyui/theme" {
   name: "light";
   default: true;
+  prefersdark: false;
+  color-scheme: "light";
   --color-primary: var(--color-blue-600);
   --color-primary-content: var(--color-blue-50);
-  --color-secondary: var(--color-orange-600);
-  --color-secondary-content: var(--color-orange-50);
-  --color-accent: var(--color-amber-600);
-  --color-accent-content: var(--color-amber-50);
+  --color-secondary: var(--color-amber-600);
+  --color-secondary-content: var(--color-amber-50);
+  --color-accent: var(--color-red-500);
+  --color-accent-content: var(--color-red-50);
+}
+
+@plugin "daisyui/theme" {
+  name: "dark";
+  default: false;
+  prefersdark: true;
+  color-scheme: "dark";
+  --color-primary: var(--color-blue-300);
+  --color-primary-content: var(--color-blue-950);
+  --color-secondary: var(--color-yellow-300);
+  --color-secondary-content: var(--color-yellow-950);
+  --color-accent: var(--color-red-300);
+  --color-accent-content: var(--color-red-950);
 }
 
 :root {
