--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -3,11 +3,13 @@ import Menu from "../icons/menu.svg";
 ---
 
 <nav class="w-full navbar bg-accent/20 shadow-sm not-prose">
-  <a href="/" class="btn btn-ghost text-xl text-primary transform-[scale(-1,1)]"
+  <a
+    href="/"
+    class="btn btn-accent btext-xl text-primary transform-[scale(-1,1)]"
     >&#129693;</a
   >
   <div class="dropdown dropdown-end ml-auto">
-    <div tabindex="0" role="button" class="btn btn-ghost lg:hidden">
+    <div tabindex="0" role="button" class="btn btn-ghost btn-accent lg:hidden">
       <Menu />
     </div>
     <ul
